registry-creds/registry-creds/registry-creds-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-registry-creds-egress
  namespace: registry-creds
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      control-plane: registry-creds-controller
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.0.21/32
    - ipBlock:
        cidr: 192.168.0.22/32
    - ipBlock:
        cidr: 192.168.0.23/32
    ports:
    - port: 6443
      protocol: TCP
